添加p6syp相关配置信息